# rect_find_sample

./: .gitignore  README.md  pyproject.toml
rect_edit/: main.py
rect_find_sample/: frame_find_editor.py  main.py  testsheet_frame_finder.py
